--- a/paginas/inicia-sesion.html
+++ b/paginas/inicia-sesion.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-<p id="text" class="text-center pt-2 ">¿No estás registrado?<a href="../crearcuenta.html"> Crear una cuenta</a></p>
+<p id="text" class="text-center pt-2 ">¿No estás registrado?<a href="../paginas/crear-cuenta.html"> Crear una cuenta</a></p>
 
 
 <!--JAVA SCRIT-->
